# bright

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml  rust.yml
src/: cli.rs  main.rs  models.rs
