[package]
name = "bright"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
env_logger = "0.11.6"
influxdb = { version = "0.7.2", features = ["derive"] }
log = "0.4.22"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]